--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "linebot": "^1.4.1",
-    "socket.io": "^2.1.1",
-    "firebase": "^5.5.2"
+    "body-parser": "~1.17.1",
+    "express": "~4.15.2",
+    "linebot": "^1.3.0"
   },
 
   "dependencies": {
